# Prueba-El-Alto

./: .env.example  README.md  pyproject.toml
app/: main.py
app/clients/: bencina.py
app/core/: config.py  exceptions.py  geo.py
app/routers/: stations.py
app/schemas/: query.py  response.py
app/services/: station_search.py
docs/: postman_collection.json
tests/: conftest.py  test_geo.py  test_routes.py  test_service.py
